# columnar

./: .gitignore  Cargo.toml  LICENSE  README.md  encoding.md
.github/workflows/: rust-tests.yml
columnar/: Cargo.toml
columnar/benches/: bench.rs  columnar_bench.rs
columnar/examples/: analyze.rs  iterable_fields.rs  macro.rs
columnar/fuzz/: .gitignore  Cargo.toml
columnar/fuzz/fuzz_targets/: data.rs  encode_decode.rs  hashmap.rs  iter_from_bytes.rs  nested_store.rs  vec.rs
columnar/fuzz/src/: lib.rs
columnar/src/: analyze.rs  column.rs  columnar.rs  columnar_internal.rs  compress.rs  err.rs  iterable.rs  lib.rs  row.rs  serde_impl.rs  wrap.rs
columnar/src/column/: bool_rle.rs  delta_of_delta.rs  delta_rle.rs  mod.rs  rle.rs  serde_impl.rs
columnar/src/fuzz/: mod.rs  sample.rs
columnar/src/strategy/: delta.rs  mod.rs  rle.rs
columnar/tests/: size.rs  test_columnar.rs  test_size.rs  tests.rs
columnar/tests/integration/: attribute.rs  compatible.rs  enum_macro.rs  fuzz_debug.rs  iterable.rs  mod.rs  skip.rs  test_size.rs
columnar/tests/integration/snapshots/: tests__integration__attribute__delta_of_delta.snap  tests__integration__attribute__delta_of_delta.snap.new  tests__integration__attribute__derive_deserialize.snap  tests__integration__attribute__derive_deserialize_generic.snap  tests__integration__attribute__derive_serialize.snap  tests__integration__attribute__derive_serialize_generic.snap  tests__integration__attribute__derive_serialize_lifetime.snap  tests__integration__attribute__derive_serialize_skip.snap  tests__integration__attribute__nested.snap  tests__integration__attribute__row_generics.snap  tests__integration__attribute__row_map_ser.snap  tests__integration__attribute__row_optional.snap  tests__integration__attribute__row_vec_ser.snap  tests__integration__attribute__table_optional_deserialize.snap
columnar_derive/: Cargo.toml
columnar_derive/src/: analyze.rs  args.rs  ast.rs  attr.rs  de.rs  derive.rs  iterable.rs  lib.rs  row.rs  utils.rs
columnar_derive/src/columnar/: ser.rs
columnar_derive/src/derive/: map.rs  mod.rs  serde.rs  utils.rs  vec.rs
columnar_derive/src/internals/: ctxt.rs  mod.rs
columnar_derive/src/serde/: de.rs  ser.rs
crates/columnar/: Cargo.toml
crates/columnar/examples/: store.rs
crates/columnar/src/: columnar.rs  data.rs  encode.rs  lib.rs
crates/columnar/src/encoder_impl/: mod.rs  rle.rs
crates/columnar_derive/: Cargo.toml
crates/columnar_serde/: Cargo.toml
crates/columnar_serde/src/: err.rs  lib.rs
crates/columnar_serde/src/columnar/: attr.rs  data.rs  encoder.rs  mod.rs
crates/columnar_serde/src/columnar_impl/: column.rs  columnar.rs  encoder.rs  leb128.rs  mod.rs  rle.rs
crates/columnar_serde/src/columnar_impl/de/: columnar.rs  mod.rs
crates/columnar_serde/src/columnar_impl/ser/: column.rs  columnar.rs  leb128.rs  mod.rs  rle.rs  zigzag.rs
crates/columnar_serde/src/serde/: mod.rs
crates/loro_columnar/: Cargo.toml
crates/loro_columnar/examples/: store.rs
crates/loro_columnar/src/: lib.rs
crates/loro_columnar/src/encoder/: error.rs  mod.rs
dev/: Cargo.toml
dev/src/: main.rs
dev/tests/: test.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: delta_of_delta.rs  hashmap.rs  iter_from_bytes.rs  nested_store.rs  vec.rs
fuzz/src/: lib.rs
fuzz/tests/: test.rs
src/: column.rs  columnar.rs  encoder.rs  err.rs  lib.rs  row.rs  serde_impl.rs
src/columnar/: attr.rs  data.rs  mod.rs
src/columnar_impl/: leb128.rs  mod.rs  rle.rs  zigzag.rs
src/columnar_impl/de/: column.rs  columnar.rs  cursor.rs  mod.rs
src/columnar_impl/ser/: column.rs  columnar.rs  leb128.rs  mod.rs  rle.rs
src/encode/: data.rs  encode.rs  example.rs  mod.rs
src/object/: change.rs  mod.rs  op.rs  store.rs
src/strategy/: mod.rs  rle.rs
tests/: test_columnar.rs
