[package]
name = "serde_columnar"
version = "0.3.5"
edition = "2021"
authors = ["leonzhao <leeeon233@gmail.com>", "zxch3n <remch183@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "Ergonomic columnar storage encoding crate with forward and backward compatible"
readme = "README.md"
repository = "https://github.com/loro-dev/columnar"
keywords = ["columnar", "column-oriented", "compression", "serde", "compatible"]

[dev-dependencies]
serde = { version = "1.0.188", features = ["derive"] }
criterion = "0.5.1"
serde_json = "1.0"
insta = { version = "1.31.0", features = ["yaml"] }

[dependencies]
serde = { version = "1.0" }
serde_columnar_derive = { path = "../columnar_derive", version = "0.3.4" }
postcard = { version = "1.0", features = ["alloc"] }
thiserror = "1.0"
lazy_static = { version = "1.4", optional = true }
bincode = { version = "1.3.3", optional = true }
itertools = "0.11.0"
flate2 = { version = "1.0", optional = true }

[[bench]]
name = "columnar_bench"
harness = false


[features]
bench = ["lazy_static", "bincode"]
analyze = ["serde_columnar_derive/analyze"]

[[example]]
name = "analyze"
path = "examples/analyze.rs"
required-features = ["analyze"]


[lib]
doctest = false

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
