[package]
name = "serde_columnar_derive"
version = "0.2.3"
authors = ["leonzhao <leeeon233@gmail.com>", "zxch3n <remch183@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "Macros implementation of #[columnar]"
keywords = ["columnar", "column_oriented", "derive", "compression", "serde"]

[lib]
name = "serde_columnar_derive"
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.103", features = ["full", "extra-traits"] }
darling = "0.14.2"

[features]
compress = []
analyze = []
