[package]
name = "columnar-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde = { version = "1.0", features = ["derive"] }
arbitrary = { version = "1.1.7", features = ["derive"] }
postcard = "^1.0"


[dependencies.serde_columnar]
path = "../columnar"

[[bin]]
name = "vec"
path = "fuzz_targets/vec.rs"
test = false
doc = false

[[bin]]
name = "hashmap"
path = "fuzz_targets/hashmap.rs"
test = false
doc = false

[[bin]]
name = "nested_store"
path = "fuzz_targets/nested_store.rs"
test = false
doc = false

[[bin]]
name = "data"
path = "fuzz_targets/data.rs"
test = false
doc = false

[[bin]]
name = "iter_from_bytes"
path = "fuzz_targets/iter_from_bytes.rs"
test = false
doc = false

[[bin]]
name = "delta_of_delta"
path = "fuzz_targets/delta_of_delta.rs"
test = false
doc = false
