[package]
name = "columnar-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde = { version = "1.0", features = ["derive"] }

[dependencies.columnar]
path = ".."
features = ["fuzzing"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "encode_decode"
path = "fuzz_targets/encode_decode.rs"
test = false
doc = false
