[package]
name = "columnar-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde = { version = "1.0", features = ["derive"] }
arbitrary = { version = "1.1.7", features=["derive"]}



[dependencies.columnar]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "vec"
path = "fuzz_targets/vec.rs"
test = false
doc = false

[[bin]]
name = "hashmap"
path = "fuzz_targets/hashmap.rs"
test = false
doc = false

[[bin]]
name = "nested_store"
path = "fuzz_targets/nested_store.rs"
test = false
doc = false
